# Ohjelmia-ja-koodeja

./: .gitignore  README.md  Viikkotehtava_1_olioohjelmointi.cpp  Viikkotehtava_2_olioohjelmointi.cpp
Olioohjelmointi_viikkotehtava_5/: CMakeLists.txt  main.cpp  notifikaattori.cpp  notifikaattori.h  seuraaja.cpp  seuraaja.h
Olioohjelmointi_viikkotehtava_7/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
Olioohjelmointi_viikkotehtava_7_part_2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
VIikkotehtava_6_olioohjelmointi/: CMakeLists.txt  main.cpp  student.cpp  student.h
viikko 2/: CMakeLists.txt  game.h  main.cpp
viikkotehtava_3_olioohjelmointi1/: CMakeLists.txt  chef.cpp  chef.h  italianchef.cpp  main.cpp
viikkotehtava_4_olioohjelmointi/: CMakeLists.txt  asiakas.cpp  asiakas.h  luottotili.cpp  luottotili.h  main.cpp  pankkitili.cpp  pankkitili.h
